adjust test to 7.x branch