@@ -13,6 +13,7 @@ import org.elasticsearch.cluster.metadata.AliasMetadata;
 import org.elasticsearch.cluster.metadata.DataStreamAlias;
 import org.elasticsearch.cluster.metadata.DataStreamTestHelper;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
+import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.common.collect.ImmutableOpenMap;
 import org.elasticsearch.common.collect.Tuple;
@@ -25,8 +26,10 @@ import org.elasticsearch.indices.SystemIndices.SystemIndexAccessLevel;
 import org.elasticsearch.indices.TestIndexNameExpressionResolver;
 import org.elasticsearch.test.ESTestCase;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.containsInAnyOrder;
@@ -191,34 +194,35 @@ public class TransportGetAliasesActionTests extends ESTestCase {
     }
 
     public void testPostProcessDataStreamAliases() {
-        var resolver = TestIndexNameExpressionResolver.newInstance();
-        var tuples = List.of(new Tuple<>("logs-foo", 1), new Tuple<>("logs-bar", 1), new Tuple<>("logs-baz", 1));
-        var clusterState = DataStreamTestHelper.getClusterStateWithDataStreams(tuples, List.of());
-        var builder = Metadata.builder(clusterState.metadata());
+        IndexNameExpressionResolver resolver = TestIndexNameExpressionResolver.newInstance();
+        List<Tuple<String, Integer>> tuples =
+            Arrays.asList(new Tuple<>("logs-foo", 1), new Tuple<>("logs-bar", 1), new Tuple<>("logs-baz", 1));
+        ClusterState clusterState = DataStreamTestHelper.getClusterStateWithDataStreams(tuples, Collections.emptyList());
+        Metadata.Builder builder = Metadata.builder(clusterState.metadata());
         builder.put("logs", "logs-foo");
         builder.put("logs", "logs-bar");
         builder.put("secret", "logs-bar");
         clusterState = ClusterState.builder(clusterState).metadata(builder).build();
 
         // return all all data streams with aliases
-        var getAliasesRequest = new GetAliasesRequest();
-        var result = TransportGetAliasesAction.postProcess(resolver, getAliasesRequest, clusterState);
+        GetAliasesRequest getAliasesRequest = new GetAliasesRequest();
+        Map<String, List<DataStreamAlias>> result = TransportGetAliasesAction.postProcess(resolver, getAliasesRequest, clusterState);
         assertThat(result.keySet(), containsInAnyOrder("logs-foo", "logs-bar"));
-        assertThat(result.get("logs-foo"), contains(new DataStreamAlias("logs", List.of("logs-bar", "logs-foo"))));
-        assertThat(result.get("logs-bar"), containsInAnyOrder(new DataStreamAlias("logs", List.of("logs-bar", "logs-foo")),
-            new DataStreamAlias("secret", List.of("logs-bar"))));
+        assertThat(result.get("logs-foo"), contains(new DataStreamAlias("logs",  Arrays.asList("logs-bar", "logs-foo"))));
+        assertThat(result.get("logs-bar"), containsInAnyOrder(new DataStreamAlias("logs",  Arrays.asList("logs-bar", "logs-foo")),
+            new DataStreamAlias("secret",  Collections.singletonList("logs-bar"))));
 
         // filter by alias name
         getAliasesRequest = new GetAliasesRequest("secret");
         result = TransportGetAliasesAction.postProcess(resolver, getAliasesRequest, clusterState);
         assertThat(result.keySet(), containsInAnyOrder("logs-bar"));
-        assertThat(result.get("logs-bar"), contains(new DataStreamAlias("secret", List.of("logs-bar"))));
+        assertThat(result.get("logs-bar"), contains(new DataStreamAlias("secret", Collections.singletonList("logs-bar"))));
 
         // filter by data stream:
         getAliasesRequest = new GetAliasesRequest().indices("logs-foo");
         result = TransportGetAliasesAction.postProcess(resolver, getAliasesRequest, clusterState);
         assertThat(result.keySet(), containsInAnyOrder("logs-foo"));
-        assertThat(result.get("logs-foo"), contains(new DataStreamAlias("logs", List.of("logs-bar", "logs-foo"))));
+        assertThat(result.get("logs-foo"), contains(new DataStreamAlias("logs",  Arrays.asList("logs-bar", "logs-foo"))));
     }
 
     public ClusterState systemIndexTestClusterState() {
